--- a/Awesome_Swift.xcodeproj/xcshareddata/xcschemes/Awesome_Swift.xcscheme
+++ b/Awesome_Swift.xcodeproj/xcshareddata/xcschemes/Awesome_Swift.xcscheme
@@ -50,6 +50,13 @@
             ReferencedContainer = "container:Awesome_Swift.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "OS_ACTIVITY_MODE"
+            value = "disable"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
